fixed page title size on iphone

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -83,3 +83,11 @@
         flex: 1;
     }
 }
+
+@media only screen and (max-width: 361px) {
+    .title {
+        font-size: 40px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
